--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!--
 Vitals Tracker — Functional Shell (No External JS)
-App Version: v2.002
+App Version: v2.003
 
 Purpose:
-- Restore core function FIRST, even if external JS modules are missing/broken/cached.
-- Buttons work immediately.
-- Swipe left/right switches panels immediately.
-- Pull-to-refresh on Home works.
-- Does NOT touch localStorage records (no reads, no writes, no clears).
+- Function-first, dependency-free shell that proves:
+  - Buttons work (no browser alerts/popups)
+  - Swipe works (left/right panels)
+  - Pull-to-refresh on Home works
+  - In-app “sheet” UI replaces generic popups
+- Does NOT read/write/clear localStorage data.
 
-Latest Update (v2.002):
-- Inline, dependency-free button wiring + swipe carousel.
-- Visible boot marker: "BOOT OK v2.002" so we can confirm the correct file is loaded.
+Latest Update (v2.003):
+- Removed all alert() calls.
+- Added in-app bottom sheet for actions (Add/Install/Clear/Exit/Export placeholders).
+- Home buttons now route panels + open sheet as appropriate.
+- Provides a visible status line for feedback without popups.
 -->
 
 <!doctype html>
@@ -30,6 +33,7 @@ Latest Update (v2.002):
       --stroke2:rgba(235,245,255,.22);
       --text:rgba(235,245,255,.86);
       --muted:rgba(235,245,255,.58);
+      --muted2:rgba(235,245,255,.42);
       --accent:#2b4e7a;
       --radius:22px;
       --font: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
@@ -40,12 +44,15 @@ Latest Update (v2.002):
       margin:0;
       font-family:var(--font);
       color:var(--text);
-      background: linear-gradient(180deg, var(--bg1), var(--bg0));
+      background:
+        radial-gradient(1200px 700px at 30% 0%, rgba(47,120,255,.18), transparent 55%),
+        linear-gradient(180deg, var(--bg1), var(--bg0));
       display:flex;
       justify-content:center;
       padding: max(14px, env(safe-area-inset-top)) 12px max(14px, env(safe-area-inset-bottom));
     }
     .app{ width:min(520px, 100%); display:flex; flex-direction:column; gap:12px; }
+
     .hdr{
       border:1px solid var(--stroke);
       border-radius: var(--radius);
@@ -65,6 +72,7 @@ Latest Update (v2.002):
       border-radius: var(--radius);
       background: rgba(255,255,255,.02);
       touch-action: pan-y;
+      position:relative;
     }
     .track{
       display:flex;
@@ -90,9 +98,12 @@ Latest Update (v2.002):
       font-weight:800;
       font-size:18px;
       letter-spacing:.2px;
+      -webkit-tap-highlight-color: transparent;
     }
     .btn:active{ transform: translateY(1px); }
     .btn.primary{ background: rgba(47,120,255,.75); border-color: rgba(120,170,255,.55); }
+    .btn.danger{ background: rgba(255,90,90,.14); border-color: rgba(255,140,140,.42); }
+
     .btnRow{ display:flex; gap:10px; }
     .btnRow .btn{ width:auto; flex:1; height:50px; font-size:16px; }
 
@@ -105,6 +116,12 @@ Latest Update (v2.002):
       line-height:1.25;
       user-select:none;
     }
+    .ptr{
+      margin-top:10px;
+      font-size:12px;
+      color: rgba(235,245,255,.45);
+      user-select:none;
+    }
 
     .card{
       border:1px solid var(--stroke);
@@ -114,12 +131,67 @@ Latest Update (v2.002):
       margin-top: 10px;
     }
 
-    /* Pull-to-refresh hint */
-    .ptr{
+    .statusLine{
       margin-top:10px;
       font-size:12px;
-      color: rgba(235,245,255,.45);
+      color: rgba(235,245,255,.62);
+      min-height: 16px;
       user-select:none;
+    }
+
+    /* Bottom Sheet (no popups) */
+    .sheetMask{
+      position:absolute;
+      inset:0;
+      background: rgba(0,0,0,.55);
+      opacity:0;
+      pointer-events:none;
+      transition: opacity .16s ease;
+    }
+    .sheet{
+      position:absolute;
+      left:0; right:0; bottom:-420px;
+      background: linear-gradient(180deg, rgba(12,21,40,.98), rgba(8,16,31,.98));
+      border-top: 1px solid var(--stroke2);
+      border-left: 1px solid var(--stroke);
+      border-right: 1px solid var(--stroke);
+      border-radius: 18px 18px 0 0;
+      padding: 14px 14px max(14px, env(safe-area-inset-bottom));
+      transition: transform .18s ease;
+      transform: translate3d(0,0,0);
+      box-shadow: 0 -18px 40px rgba(0,0,0,.45);
+    }
+    .sheetOpen .sheetMask{
+      opacity:1;
+      pointer-events:auto;
+    }
+    .sheetOpen .sheet{
+      transform: translate3d(0,-420px,0);
+    }
+    .sheetHead{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:10px;
+      margin-bottom:10px;
+    }
+    .sheetTitle{
+      font-weight:900;
+      letter-spacing:.2px;
+    }
+    .sheetClose{
+      width:auto;
+      padding: 0 14px;
+      height:40px;
+      border-radius:999px;
+      font-size:14px;
+    }
+    .sheetBody{
+      color: rgba(235,245,255,.76);
+      font-size:14px;
+      line-height:1.25;
+      padding: 6px 2px 0;
+      white-space:pre-wrap;
     }
   </style>
 </head>
@@ -128,21 +200,23 @@ Latest Update (v2.002):
   <div class="app">
     <div class="hdr">
       <div class="title">Vitals Tracker</div>
-      <div class="boot" id="bootMark">BOOT OK v2.002</div>
+      <div class="boot" id="bootMark">BOOT OK v2.003</div>
     </div>
 
     <div class="viewport" id="viewport">
       <div class="track" id="track">
+
         <!-- HOME -->
         <section class="panel" id="p0">
           <div class="stack">
             <button class="btn primary" id="btnAdd">ADD Reading</button>
             <button class="btn" id="btnLog">Log</button>
             <button class="btn" id="btnCharts">Charts</button>
+
             <div class="btnRow">
               <button class="btn" id="btnInstall">Install</button>
               <button class="btn" id="btnClear">Clear Data</button>
-              <button class="btn" id="btnExit">Exit</button>
+              <button class="btn danger" id="btnExit">Exit</button>
             </div>
           </div>
 
@@ -150,12 +224,12 @@ Latest Update (v2.002):
             Function-first shell. No data is read or written here.
           </div>
           <div class="ptr" id="ptrHint">Pull down on Home to refresh (release).</div>
+          <div class="statusLine" id="statusLine"></div>
 
           <div class="card">
-            <div style="font-weight:800;">Status</div>
+            <div style="font-weight:900;">Status</div>
             <div style="margin-top:6px; color:rgba(235,245,255,.70); font-size:14px;">
-              If buttons/swipe work now, your issue was cached/broken external JS.
-              Next step will be re-attaching the real modules one by one.
+              Buttons and swipe are live. Next we reattach data + charts without risking your existing records.
             </div>
           </div>
         </section>
@@ -168,9 +242,9 @@ Latest Update (v2.002):
           </div>
 
           <div class="card">
-            <div style="font-weight:800;">Log (placeholder)</div>
+            <div style="font-weight:900;">Log (placeholder)</div>
             <div style="margin-top:6px; color:rgba(235,245,255,.70); font-size:14px;">
-              Next, we will wire this to your existing v1 dataset safely.
+              Next step: read-only load of your existing v1 records and render them here.
             </div>
           </div>
         </section>
@@ -183,12 +257,23 @@ Latest Update (v2.002):
           </div>
 
           <div class="card">
-            <div style="font-weight:800;">Charts (placeholder)</div>
+            <div style="font-weight:900;">Charts (placeholder)</div>
             <div style="margin-top:6px; color:rgba(235,245,255,.70); font-size:14px;">
-              Next, we will re-enable your chart engine with horizontal pan/zoom.
+              Next step: attach chart engine with horizontal pan/zoom only + hypertension bands.
             </div>
           </div>
         </section>
+
+      </div>
+
+      <!-- In-app sheet (no browser popups) -->
+      <div class="sheetMask" id="sheetMask"></div>
+      <div class="sheet" id="sheet">
+        <div class="sheetHead">
+          <div class="sheetTitle" id="sheetTitle">Action</div>
+          <button class="btn sheetClose" id="sheetClose">Close</button>
+        </div>
+        <div class="sheetBody" id="sheetBody"></div>
       </div>
     </div>
   </div>
@@ -197,30 +282,91 @@ Latest Update (v2.002):
     (function(){
       const track = document.getElementById("track");
       const viewport = document.getElementById("viewport");
+      const statusLine = document.getElementById("statusLine");
 
+      // Sheet
+      const sheetMask = document.getElementById("sheetMask");
+      const sheetTitle = document.getElementById("sheetTitle");
+      const sheetBody  = document.getElementById("sheetBody");
+      const sheetClose = document.getElementById("sheetClose");
+
+      function setStatus(msg){
+        statusLine.textContent = msg || "";
+      }
+
+      function openSheet(title, body){
+        sheetTitle.textContent = title || "Action";
+        sheetBody.textContent = body || "";
+        viewport.classList.add("sheetOpen");
+      }
+      function closeSheet(){
+        viewport.classList.remove("sheetOpen");
+      }
+      sheetMask.addEventListener("click", closeSheet);
+      sheetClose.addEventListener("click", closeSheet);
+
+      // Panels
       let idx = 0; // 0=Home, 1=Log, 2=Charts
       function go(n){
         idx = Math.max(0, Math.min(2, n));
         track.style.transform = "translate3d(" + (-idx*100) + "%,0,0)";
+        closeSheet();
+        setStatus("");
       }
 
-      // Buttons
+      // Button routing
       document.getElementById("btnLog").addEventListener("click", ()=>go(1));
       document.getElementById("btnCharts").addEventListener("click", ()=>go(2));
       document.getElementById("btnBackFromLog").addEventListener("click", ()=>go(0));
       document.getElementById("btnBackFromCharts").addEventListener("click", ()=>go(0));
 
-      document.getElementById("btnAdd").addEventListener("click", ()=>alert("Add flow will be wired next."));
-      document.getElementById("btnAddFromLog").addEventListener("click", ()=>alert("Add flow will be wired next."));
-      document.getElementById("btnInstall").addEventListener("click", ()=>alert("Install will be wired back after JS modules are confirmed."));
+      // Non-destructive placeholders (no alerts)
+      function placeholder(title, msg){
+        openSheet(title, msg);
+        setStatus(title);
+      }
+
+      document.getElementById("btnAdd").addEventListener("click", ()=>{
+        placeholder("ADD Reading",
+          "Add/Edit flow will be wired next.\n\n" +
+          "Safety: no existing records will be modified until you confirm the add/edit UI is correct."
+        );
+      });
+
+      document.getElementById("btnAddFromLog").addEventListener("click", ()=>{
+        placeholder("ADD Reading",
+          "Add/Edit flow will be wired next from the Log panel.\n\n" +
+          "Safety: we will load your existing v1 records read-only first."
+        );
+      });
+
+      document.getElementById("btnInstall").addEventListener("click", ()=>{
+        placeholder("Install",
+          "Install will be wired after we confirm modular JS is stable.\n\n" +
+          "For now you can use Chrome menu → Install app (if offered)."
+        );
+      });
+
       document.getElementById("btnClear").addEventListener("click", ()=>{
-        alert("Clear Data is disabled in the function-first shell. (Data safety)");
+        placeholder("Clear Data (Disabled)",
+          "Clear Data is intentionally disabled in the function-first shell.\n\n" +
+          "We will restore Clear Data only after your existing records are confirmed visible."
+        );
       });
+
       document.getElementById("btnExit").addEventListener("click", ()=>{
-        // Keep it simple here; we will restore your known-good exit handler later.
-        alert("Exit handler will be restored later (known-good v1 behavior).");
+        placeholder("Exit (Pending)",
+          "Exit will be restored with your known-good v1 handler later.\n\n" +
+          "This placeholder prevents any accidental behavior changes."
+        );
       });
-      document.getElementById("btnExportCharts").addEventListener("click", ()=>alert("Export (visible range) will be wired next."));
+
+      document.getElementById("btnExportCharts").addEventListener("click", ()=>{
+        placeholder("Export Visible (Pending)",
+          "Export will be wired once the chart has a real visible-range window.\n\n" +
+          "Requirement: export only the currently visible date range."
+        );
+      });
 
       // Swipe panels (basic)
       let startX=0, startY=0, tracking=false;
@@ -234,9 +380,9 @@ Latest Update (v2.002):
 
       viewport.addEventListener("touchmove", (e)=>{
         if(!tracking) return;
+        if(viewport.classList.contains("sheetOpen")) return;
         const dx = e.touches[0].clientX - startX;
         const dy = e.touches[0].clientY - startY;
-        // horizontal intent: prevent browser vertical scroll fighting the carousel
         if(Math.abs(dx) > 12 && Math.abs(dx) > Math.abs(dy)){
           e.preventDefault();
         }
@@ -245,6 +391,7 @@ Latest Update (v2.002):
       viewport.addEventListener("touchend", (e)=>{
         if(!tracking) return;
         tracking=false;
+        if(viewport.classList.contains("sheetOpen")) return;
         const endX = (e.changedTouches && e.changedTouches[0]) ? e.changedTouches[0].clientX : startX;
         const dx = endX - startX;
         if(Math.abs(dx) < 40) return;
@@ -271,6 +418,7 @@ Latest Update (v2.002):
 
       // Start at Home
       go(0);
+      setStatus("Ready.");
     })();
   </script>
 </body>
@@ -278,8 +426,8 @@ Latest Update (v2.002):
 
 <!--
 EOF — index.html
-App Version: v2.002
+App Version: v2.003
 Notes:
-- This file proves UI wiring independent of external JS.
-- Once this works, we reintroduce modules one at a time (starting with storage read-only).
+- No browser popups are used; all feedback is in-app via the bottom sheet.
+- Next file to wire real functionality safely: js/storage.js (read-only load + count display).
 -->
